--- a/enquire.html
+++ b/enquire.html
@@ -5,7 +5,7 @@
 
 <html>
     <head>
-        <link rel="icon" type="image/png" href="">
+        <link rel="icon" type="image/png" href="assets/NCLogo.png">
             <title>Enquiries | Nook Cafe</title>
         
     </head>
@@ -15,7 +15,7 @@
     <body>
 
         <header>
-            <a href="index.html"><img class="logoimg" src="" alt="logoimg"></a>
+            <a href="index.html"><img class="logoimg" src="assets/NCLogo.png" alt="logoimg"></a>
             <li class="logo"><a class="a-header" href="index.html">Nook Cafe</a></li>
         </header>
 
