--- a/gaming.html
+++ b/gaming.html
@@ -1,3 +1,174 @@
 <!--Tabs for each section with images and information about each section. also including games available-->
 
 <!--Input a button to take the user to enquire page to place booking-->
+
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <link rel="icon" type = "image/png" href="assets/NCLogo.png">
+        <title>Gaming Info | Nook Cafe</title>
+        <!--Like stylesheets-->
+        <!--Homestyle-->
+        <!--Header-->
+        <!--Footer-->
+    
+    </head>
+
+    <!--Body-->
+
+        <body>
+
+        <!--header Section-->
+        <header>
+            <a href="index.html"><img class="logoimg" src="assets/NCLogo.png" alt="logoimg"></a>     <!--Insert logo image-->
+            <li class="logo"><a class="a-header" href="index.html">Nook Cafe</a></li>
+        <nav>
+            <ul class="NavOptions">
+                <li class="item"><a class="a-header" href="gaming.html">Video game section
+                    <ul class="submenu">
+                        <li class="sitem"><a href="gaming.html" target="blank">PC gaming</a></li>
+                        <li class="sitem"><a href="gaming.html" target="blank">Console gaming</a></li>
+                        <li class="sitem"><a href="gaming.html" target="blank">VR gaming</a></li>
+                    </ul>
+                </a></li>
+                <li class="item"><a class="a-header" href="cafe.html" >Cafe menu</a></li>
+                <li class="item"><a class="a-header" href="enquire.html" >Enquire</a></li>
+                <li class="item button"><a class="a-header" href="Login.html">login</a></li>
+                <li class="item button secondary"><a class="a-header" href="signUp.html">Sign up</a></li>
+                <li class="toggle"><a href="#"><span class="bars"></span></a></li>
+            </ul>
+        </nav>
+        </header>
+        <hr class="custom-hr">
+
+        <!--Tabs section-->
+
+        <div class="containertabs">
+            <div class="tabs">
+                <h2>PC Section</h2>
+                <h3>Games Offered</h3>
+                <h3>Time and Prices</h3>
+                <h2>Console Section</h2>
+                <h3>Games Offered</h3>
+                <h3>Time and Prices</h3>
+                <h2>VR Section</h2>
+                <h3>Games Offered</h3>
+                <h3>Time and Prices</h3>
+            </div>
+            <div class="tabs-content">
+                <div>
+                    <img class="PCimg" src="assets/pcPage.jpeg" alt="PCimg">
+                    <h2> PC Gaming</h2>
+                    <p>
+                        The PC gaming section allows for players to play their favourite games, whether with their friends are our neighbouring consoles or whether
+                        they are here for the solo vibe. The PC hardware is kept up to date to ensure no trouble is ever faced when gaming. 
+                    </p>
+                    <h4>PC Specifications</h4>
+                    <ul>
+                        <li>Intel i9 - 10980XE CPU </li>
+                        <li>32GB RAM </li>
+                        <li>GeFOrce RTX 3090 </li>
+                        <li>3 Hard Drives</li>
+                    </ul>
+                    <h2> Games offered</h2>
+                    <ul>
+                        <li>League of Legends</li>
+                        <li>Valorant</li>
+                        <li>Fortnite</li>
+                        <li>Counter Strike</li>
+                        <li>Minecraft</li>
+                        <li>Dota 2</li>
+                        <li>Players are allowed to link a steam account, epic games account or EA account</li>
+                    </ul>
+                    <h2> Time and Prices</h2>
+                    <ul>
+                        <li>Monday: 7am - 9pm</li>
+                        <li>Tuesday: 7am - 9pm</li>
+                        <li>Wednesday: 7am - 9pm</li>
+                        <li>Thurseday: 7am - 9pm</li>
+                        <li>Friday: 7am - 9pm</li>
+                        <li>Saturday: 7am - 11pm</li>
+                        <li>Sunday: 12am - 6pm</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <img class="Consoleimg" src="assets/consolepage.jpeg" alt="Consoleimg">
+                    <h2> Console Gaming</h2>
+                    <p>
+                        The Console gaming section allows for players to play their favourite games, whether with their friends are our neighbouring consoles or whether
+                        they are here for the solo vibe. The Console hardware is kept up to date to ensure no trouble is ever faced when gaming. 
+                    </p>
+                    <h4>Consoles Available for playing</h4>
+                    <ul>
+                        <li>Nintendo Switch OLED Model</li>
+                        <li>Nintendo Switch 2</li>
+                        <li>XBOX Series X</li>
+                        <li>Playstation 5</li>
+                    </ul>
+                    <h2> Games offered</h2>
+                    <ul>
+                        <li>Tekken [Playstation 5]</li>
+                        <li>Injustice [Playstation 5]</li>
+                        <li>Mortal Kombat [Playstation 5</li>
+                        <li>Call of Duty [Playstation 5 + Xbox]</li>
+                        <li>Minecraft [All consoles available</li>
+                        <li>God of War [Playstation 5]</li>
+                        <li>Spiderman [Playstation 5]</li>
+                        <li>EAFC [Playstation 5]</li>
+                        <li>Mario Kart [Nintendo Switch]</li>
+                        <li>Mario Party [Nintendo Switch]</li>
+                        <li>Super Smash Bros [Nintendo]</li>
+                        <li>Splatoon [Nintendo]</li>
+                        <li>Halo [Xbox]</li>
+                        <li>Forza 5 [Xbox + Playstation]</li>
+                    </ul>
+                    <h2> Time and Prices</h2>
+                    <ul>
+                        <li>Monday: 7am - 9pm</li>
+                        <li>Tuesday: 7am - 9pm</li>
+                        <li>Wednesday: 7am - 9pm</li>
+                        <li>Thurseday: 7am - 9pm</li>
+                        <li>Friday: 7am - 9pm</li>
+                        <li>Saturday: 7am - 11pm</li>
+                        <li>Sunday: 12am - 6pm</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <img class="VRimg" src="assets/VRpage.jpeg" alt="VRimg">
+                    <h2> VR Gaming</h2>
+                    <p>
+                        Join us for our Virtual Reality game base, where you can play your favourite games on many different headsets. Enjoy the world of gaming all within a headset for 
+                        the ultra realistic experience
+                        The VR gaming section allows for players to play their favourite games, whether with their friends are our neighbouring consoles or whether
+                        they are here for the solo vibe. The VR hardware is kept up to date to ensure no trouble is ever faced when gaming. All VR Headsets are sanitized after usage
+                    </p>
+                    <h4>VR Specifications</h4>
+                    <ul>
+                        <li>Oculus Rift 3 </li>
+                        <li>HTC Vive </li>
+                    </ul>
+                    <h2> Games offered</h2>
+                    <ul>
+                        <li>Beat Saber</li>
+                        <li>Arizona Sunshine</li>
+                        <li>Job Simulator</li>
+                        <li>Five nights at Freddies</li>
+                        <li>Minecraft</li>
+                    </ul>
+                    <h2> Time and Prices</h2>
+                    <ul>
+                        <li>Monday: 7am - 9pm</li>
+                        <li>Tuesday: 7am - 9pm</li>
+                        <li>Wednesday: 7am - 9pm</li>
+                        <li>Thurseday: 7am - 9pm</li>
+                        <li>Friday: 7am - 9pm</li>
+                        <li>Saturday: 7am - 11pm</li>
+                        <li>Sunday: 12am - 6pm</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+</html>
