--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html>
     <head>
-        <link rel="icon" type = "image/png" ref="">
-        <title>Home Page | Empowering the nation</title>
+        <link rel="icon" type = "image/png" href="assets/NCLogo.png">
+        <title>Home Page | Nook Cafe</title>
         <!--Like stylesheets-->
         <!--Homestyle-->
         <!--Header-->
@@ -17,7 +17,7 @@
 
         <!--header Section-->
         <header>
-            <a href="index.html"><img class="logoimg" src="" alt="logoimg"></a>     <!--Insert logo image-->
+            <a href="index.html"><img class="logoimg" src="assets/NCLogo.png" alt="logoimg"></a>     <!--Insert logo image-->
             <li class="logo"><a class="a-header" href="index.html">Nook Cafe</a></li>
         <nav>
             <ul class="NavOptions">
@@ -76,7 +76,7 @@
                     <a href=""><img src="assets/enquiriesimg.jpeg" alt="img 1"></a>     
                         <div class="intro">
                             <h1>Enquire</h1>
-                            <p>View <span><a href="enquire.html"> enquiries</a></span> here</p>   
+                            <p>Place <span><a href="enquire.html"> enquiries</a></span> here</p>   
                         </div>
                 </div>
 
@@ -119,7 +119,20 @@
         <div class="membership-section">
             <div class="membershipPrice-container">
                 <h1 class="MPHeading">Join our membership for exclusive discounts</h1>
+                <h2 class="MPCHeading">Compare membership plans</h2>
                 <!--Insert custome price images. 3 images for gold, platinum, and diamond-->
+                <div class="cardPrice">
+                    <img src="assets/GoldMembeship.png" alt="img 1">   <!--Insert Prices-->
+                    <h1 class="priceHeading">R250 per month</h1>
+                </div>
+                <div class="cardPrice">
+                    <img src="assets/PlatinumMembership.png" alt="img 1">   
+                    <h1 class="priceHeading">R1000 per month</h1>
+                </div>
+                <div class="cardPrice">
+                    <img src="assets/DiamondMembership.png" alt="img 1">   
+                    <h1 class="priceHeading">R2000 per month</h1>
+                </div>
             </div>
         </div>
 
