--- a/signup.html
+++ b/signup.html
@@ -4,14 +4,14 @@
 
 <html>
     <head>
-        <link rel="icon" type ="image/png" href="">
+        <link rel="icon" type ="image/png" href="assets/NCLogo.png"></a>">
             <title>Sign Up | Nook Cafe</title>
     </head>
 
     <Body>
 
         <header>
-            <a href="index.html"><img class="logoimg" src="" alt="logoimg"></a>
+            <a href="index.html"><img class="logoimg" src="assets/NCLogo.png" alt="logoimg"></a>
             <li class="logo"><a class="a-header" href="index.html">Nook Cafe</a></li>
         </header>
 
