--- a/cafe.html
+++ b/cafe.html
@@ -2,8 +2,8 @@
 
 <html>
     <head>
-        <link rel="icon" type = "image/png" ref="">
-        <title>Home Page | Empowering the nation</title>
+        <link rel="icon" type = "image/png" href="assets/NCLogo.png">
+        <title>Cafe | Nook Cafe</title>
         <!--Like stylesheets-->
         <!--Homestyle-->
         <!--Header-->
@@ -17,7 +17,7 @@
 
         <!--header Section-->
         <header>
-            <a href="index.html"><img class="logoimg" src="" alt="logoimg"></a>     <!--Insert logo image-->
+            <a href="index.html"><img class="logoimg" src="assets/NCLogo.png" alt="logoimg"></a>     <!--Insert logo image-->
             <li class="logo"><a class="a-header" href="index.html">Nook Cafe</a></li>
         <nav>
             <ul class="NavOptions">
