--- a/login.html
+++ b/login.html
@@ -2,12 +2,12 @@
 
 <html>
     <head>
-        <link rel="icon" type ="image/png" href="">
+        <link rel="icon" type ="image/png" href="assets/NCLogo.png">
         <title>Login | Nook Cafe</title>
     </head>
     <body>
         <header>
-            <a href="index.html"><img class="logoimg" src="" alt="logoimg"></a>
+            <a href="index.html"><img class="logoimg" src="assets/NCLogo.png" alt="logoimg"></a>
             <li class="logo"><a class="a-header" href="index.html">Nook Cafe</a></li>
         </header>
 
