--- a/enquire.html
+++ b/enquire.html
@@ -80,6 +80,11 @@
                         <a href=""><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
+
+                <div class="footer-col">
+                    <h4>Map</h4>
+                    <!--Add map-->
+                </div>
   
             </div>
         </div>
