--- a/gaming.html
+++ b/gaming.html
@@ -61,6 +61,7 @@
                     <img class="PCimg" src="assets/pcPage.jpeg" alt="PCimg">
                     <h2> PC Gaming</h2>
                     <p>
+                        High spec PC's with a variety of games for you to feel like you're in an esports venue. 
                         The PC gaming section allows for players to play their favourite games, whether with their friends are our neighbouring consoles or whether
                         they are here for the solo vibe. The PC hardware is kept up to date to ensure no trouble is ever faced when gaming. 
                     </p>
@@ -91,12 +92,18 @@
                         <li>Saturday: 7am - 11pm</li>
                         <li>Sunday: 12am - 6pm</li>
                     </ul>
+                    <ul>
+                        <li>Prices range from:</li>
+                        <li>R100 per person</li>
+                        <li>R70 per person for birthday events</li>
+                    </ul>
                 </div>
 
                 <div>
                     <img class="Consoleimg" src="assets/consolepage.jpeg" alt="Consoleimg">
                     <h2> Console Gaming</h2>
                     <p>
+                        Playstation, Xbox, Nintendo. All the most used consoles are available for you and your friends to play with.
                         The Console gaming section allows for players to play their favourite games, whether with their friends are our neighbouring consoles or whether
                         they are here for the solo vibe. The Console hardware is kept up to date to ensure no trouble is ever faced when gaming. 
                     </p>
@@ -134,6 +141,11 @@
                         <li>Saturday: 7am - 11pm</li>
                         <li>Sunday: 12am - 6pm</li>
                     </ul>
+                    <ul>
+                        <li>Prices range from:</li>
+                        <li>R80 per person</li>
+                        <li>R70 per person for birthday events</li>
+                    </ul>
                 </div>
 
                 <div>
@@ -167,6 +179,11 @@
                         <li>Friday: 7am - 9pm</li>
                         <li>Saturday: 7am - 11pm</li>
                         <li>Sunday: 12am - 6pm</li>
+                    </ul>
+                    <ul>
+                        <li>Prices range from:</li>
+                        <li>R120 per person</li>
+                        <li>R70 per person for birthday events</li>
                     </ul>
                 </div>
             </div>
