--- a/cafe.html
+++ b/cafe.html
@@ -6,8 +6,12 @@
         <title>Cafe | Nook Cafe</title>
         <!--Like stylesheets-->
         <!--Homestyle-->
+        <link rel="stylesheet" href="css/cafe.css">
         <!--Header-->
+        <link rel="stylesheet" href="css/header.css">
         <!--Footer-->
+        <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
     </head>
 
@@ -21,13 +25,7 @@
             <li class="logo"><a class="a-header" href="index.html">Nook Cafe</a></li>
         <nav>
             <ul class="NavOptions">
-                <li class="item"><a class="a-header" href="gaming.html">Video game section
-                    <ul class="submenu">
-                        <li class="sitem"><a href="gaming.html" target="blank">PC gaming</a></li>
-                        <li class="sitem"><a href="gaming.html" target="blank">Console gaming</a></li>
-                        <li class="sitem"><a href="gaming.html" target="blank">VR gaming</a></li>
-                    </ul>
-                </a></li>
+                <li class="item"><a class="a-header" href="gaming.html">Video game section</a></li>
                 <li class="item"><a class="a-header" href="cafe.html" >Cafe menu</a></li>
                 <li class="item"><a class="a-header" href="enquire.html" >Enquire</a></li>
                 <li class="item button"><a class="a-header" href="Login.html">login</a></li>
@@ -42,14 +40,50 @@
         <!--Display 3 pictures that move, pictures move automatically-->
         <br>
         <div class="hero-container">
-                <img src="assets/cafeimg1.jpeg" alt="horizontal image" class="full-width-image">        <!--Drinks image-->
-                <img src="assets/cafeimg2.jpeg" alt="horizontal image" class="full-width-image">        <!--Cafe image-->
-                <img src="assets/cafeimg3.jpeg" alt="horizontal image" class="full-width-image">        <!--snacks/food image-->
+            <img src="assets/cafeimg3.jpeg" alt="horizontal image" class="full-width-image">        <!--snacks/food image-->
+        </div>
         <br>
 
         <!--Menu container-->
         <!--Insert menu image-->
-        <img class="menuimg" src="assets/menuimg.jpeg" alt="menuimg">
+        <div class="menu">
+            <img src="assets/menuimg.jpeg" alt="menuimg">
+        </div>
 
+                    <!--Footer Section-->
+        <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Contact us</h4>
+                    <ul> 
+                        <li><a href="tel:+0720664782">Call now [011 111 1111]</a></li> <!--Turn to contact number-->
+                        <li><a href="email">NookCafe@gmail.com</a></li>
+                        <p class="copyright">&copy; copyright reserved</p>
+                    </ul>
+                </div>
+  
+                <div class="footer-col">
+                    <h4>Locations</h4>
+                    <ul>
+                        <li><a href="locations">Meyersdal</a></li> 
+                        <li><a href="locations">Pretoria</a></li> 
+                        <li><a href="locations">Bloemfontein</a></li> 
+                    </ul>
+                </div>
+  
+  
+                <div class="footer-col">
+                    <h4>Follow us</h4>
+                    <div class="social-links">
+                        <a href=""><i class="fab fa-instagram"></i></a>
+                        <a href=""><i class="fab fa-facebook"></i></a>
+                    </div>
+                </div>
+  
+            </div>
+        </div>
+    </footer>
 
+    </body>
     </html>
