--- a/enquire.html
+++ b/enquire.html
@@ -6,6 +6,10 @@
 <html>
     <head>
         <link rel="icon" type="image/png" href="assets/NCLogo.png">
+        <link rel="stylesheet" href="css/header.css">
+        <link rel="stylesheet" href="css/UserDetails.css">
+        <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
             <title>Enquiries | Nook Cafe</title>
         
     </head>
@@ -49,7 +53,7 @@
             </div>
         </div>
 
-        <!--Footer Section-->
+                <!--Footer Section-->
         <footer class="footer">
         <div class="container">
             <div class="row">
@@ -57,7 +61,7 @@
                     <h4>Contact us</h4>
                     <ul> 
                         <li><a href="tel:+0720664782">Call now [011 111 1111]</a></li> <!--Turn to contact number-->
-                        <li><a href="email">email@email.com</a></li>
+                        <li><a href="email">NookCafe@gmail.com</a></li>
                         <p class="copyright">&copy; copyright reserved</p>
                     </ul>
                 </div>
@@ -76,14 +80,8 @@
                     <h4>Follow us</h4>
                     <div class="social-links">
                         <a href=""><i class="fab fa-instagram"></i></a>
-                        <a href=""><i class="fab fa-instagram"></i></a>
-                        <a href=""><i class="fab fa-instagram"></i></a>
+                        <a href=""><i class="fab fa-facebook"></i></a>
                     </div>
-                </div>
-
-                <div class="footer-col">
-                    <h4>Map</h4>
-                    <!--Add map-->
                 </div>
   
             </div>
