--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
         <title>Home Page | Nook Cafe</title>
         <!--Like stylesheets-->
         <!--Homestyle-->
+        <link rel="stylesheet" href="css/index.css">
         <!--Header-->
+        <link rel="stylesheet" href="css/header.css">
         <!--Footer-->
+        <link rel="stylesheet" href="css/footer.css">
+
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
     </head>
 
@@ -21,13 +26,7 @@
             <li class="logo"><a class="a-header" href="index.html">Nook Cafe</a></li>
         <nav>
             <ul class="NavOptions">
-                <li class="item"><a class="a-header" href="gaming.html">Video game section
-                    <ul class="submenu">
-                        <li class="sitem"><a href="gaming.html" target="blank">PC gaming</a></li>
-                        <li class="sitem"><a href="gaming.html" target="blank">Console gaming</a></li>
-                        <li class="sitem"><a href="gaming.html" target="blank">VR gaming</a></li>
-                    </ul>
-                </a></li>
+                <li class="item"><a class="a-header" href="gaming.html">Video game section</a></li>
                 <li class="item"><a class="a-header" href="cafe.html" >Cafe menu</a></li>
                 <li class="item"><a class="a-header" href="enquire.html" >Enquire</a></li>
                 <li class="item button"><a class="a-header" href="Login.html">login</a></li>
@@ -43,13 +42,14 @@
         <br>
         <div class="hero-container">
                 <img src="assets/pcadd.jpeg" alt="horizontal image" class="full-width-image">        <!--PC image-->
-                <img src="assets/cafesnacks.jpeg" alt="horizontal image" class="full-width-image">        <!--Cafe image-->
-                <img src="assets/consoleadd.jpeg" alt="horizontal image" class="full-width-image">        <!--Console image-->
-                <img src="assets/vradd.jpeg" alt="horizontal image" class="full-width-image">        <!--VR image-->
+                <!--<img src="assets/cafesnacks.jpeg" alt="horizontal image" class="full-width-image">-->        <!--Cafe image-->
+                <!--<img src="assets/consoleadd.jpeg" alt="horizontal image" class="full-width-image">-->        <!--Console image-->
+                <!--<img src="assets/vradd.jpeg" alt="horizontal image" class="full-width-image">-->        <!--VR image-->
 
                 <div class="overlay">
                     <h2><a href="enquire.html">Enquire</a></h2>     
             </div>
+        </div>
         <br>
 
          <!--Diplay Section-->
@@ -94,7 +94,7 @@
                 <!--Insert image. will be on the left hand side-->
                 <!--Insert images-->
                 <img src="assets/cafeimghome.jpeg" alt="img 1">
-                <ul class="prices">
+                <ul>
                     <li>3 different ways to play</li>
                     <br>
                     <li>With over a hundred games to play</li>
@@ -103,6 +103,8 @@
                 </ul>
             </div>
         </div>
+
+        <br>
 
         <!--Cafe section advertisement-->
 
@@ -113,29 +115,32 @@
                 <img src="assets/cafeimg2.jpeg" alt="img 1">
             </div>
         </div>
+        
+        <br>
 
         <!--Membership programme section advertisement-->
 
         <div class="membership-section">
+            <h1 class="MPHeading">Join our membership for exclusive discounts</h1>
+            <h2 class="MPCHeading">Compare membership plans</h2>
             <div class="membershipPrice-container">
-                <h1 class="MPHeading">Join our membership for exclusive discounts</h1>
-                <h2 class="MPCHeading">Compare membership plans</h2>
                 <!--Insert custome price images. 3 images for gold, platinum, and diamond-->
                 <div class="cardPrice">
                     <img src="assets/GoldMembeship.png" alt="img 1">   <!--Insert Prices-->
-                    <h1 class="priceHeading">R250 per month</h1>
+                    <h1>R250 per month</h1>
                 </div>
                 <div class="cardPrice">
                     <img src="assets/PlatinumMembership.png" alt="img 1">   
-                    <h1 class="priceHeading">R1000 per month</h1>
+                    <h1>R1000 per month</h1>
                 </div>
                 <div class="cardPrice">
                     <img src="assets/DiamondMembership.png" alt="img 1">   
-                    <h1 class="priceHeading">R2000 per month</h1>
+                    <h1>R2000 per month</h1>
                 </div>
             </div>
         </div>
 
+        <br>
         <!--Footer Section-->
         <footer class="footer">
         <div class="container">
@@ -144,7 +149,7 @@
                     <h4>Contact us</h4>
                     <ul> 
                         <li><a href="tel:+0720664782">Call now [011 111 1111]</a></li> <!--Turn to contact number-->
-                        <li><a href="email">email@email.com</a></li>
+                        <li><a href="email">NookCafe@gmail.com</a></li>
                         <p class="copyright">&copy; copyright reserved</p>
                     </ul>
                 </div>
@@ -163,8 +168,7 @@
                     <h4>Follow us</h4>
                     <div class="social-links">
                         <a href=""><i class="fab fa-instagram"></i></a>
-                        <a href=""><i class="fab fa-instagram"></i></a>
-                        <a href=""><i class="fab fa-instagram"></i></a>
+                        <a href=""><i class="fab fa-facebook"></i></a>
                     </div>
                 </div>
   
