--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,10 @@
 <html>
     <head>
         <link rel="icon" type ="image/png" href="assets/NCLogo.png"></a>">
+        <link rel="stylesheet" href="css/header.css">
+        <link rel="stylesheet" href="css/UserDetails.css">
+        <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
             <title>Sign Up | Nook Cafe</title>
     </head>
 
@@ -50,6 +54,41 @@
             </div>
         </div>
         </div>
+
+                <!--Footer Section-->
+        <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Contact us</h4>
+                    <ul> 
+                        <li><a href="tel:+0720664782">Call now [011 111 1111]</a></li> <!--Turn to contact number-->
+                        <li><a href="email">NookCafe@gmail.com</a></li>
+                        <p class="copyright">&copy; copyright reserved</p>
+                    </ul>
+                </div>
+  
+                <div class="footer-col">
+                    <h4>Locations</h4>
+                    <ul>
+                        <li><a href="locations">Meyersdal</a></li> 
+                        <li><a href="locations">Pretoria</a></li> 
+                        <li><a href="locations">Bloemfontein</a></li> 
+                    </ul>
+                </div>
+  
+  
+                <div class="footer-col">
+                    <h4>Follow us</h4>
+                    <div class="social-links">
+                        <a href=""><i class="fab fa-instagram"></i></a>
+                        <a href=""><i class="fab fa-facebook"></i></a>
+                    </div>
+                </div>
+  
+            </div>
+        </div>
+    </footer>
         
     </Body>
 </html>
